Se creó con Colab

--- a/Plazas__Andres_Analizando_EA1.ipynb
+++ b/Plazas__Andres_Analizando_EA1.ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "8tUorAOyl45Z"
       },
-      "execution_count": 108,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -122,9 +122,9 @@
           "height": 676
         },
         "id": "Q3xT5aPjlh1X",
-        "outputId": "f6992239-bd9e-4ee2-9330-096da7ff450e"
+        "outputId": "0f6850d8-2741-4279-df6a-c39e1182f0a3"
       },
-      "execution_count": 109,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-73a565a3-f6b1-443b-9380-c7a197ffcf3d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2deac501-4228-431b-b150-0e6527470cad\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -517,7 +517,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-73a565a3-f6b1-443b-9380-c7a197ffcf3d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2deac501-4228-431b-b150-0e6527470cad')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -569,12 +569,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-73a565a3-f6b1-443b-9380-c7a197ffcf3d button.colab-df-convert');\n",
+              "        document.querySelector('#df-2deac501-4228-431b-b150-0e6527470cad button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-73a565a3-f6b1-443b-9380-c7a197ffcf3d');\n",
+              "        const element = document.querySelector('#df-2deac501-4228-431b-b150-0e6527470cad');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -594,8 +594,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-1547463e-c468-4640-97d8-42f5e4d818e0\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1547463e-c468-4640-97d8-42f5e4d818e0')\"\n",
+              "    <div id=\"df-162e8bc6-d654-4145-a724-b071d181f071\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-162e8bc6-d654-4145-a724-b071d181f071')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -714,7 +714,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-1547463e-c468-4640-97d8-42f5e4d818e0 button');\n",
+              "            document.querySelector('#df-162e8bc6-d654-4145-a724-b071d181f071 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -730,7 +730,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 109
+          "execution_count": 115
         }
       ]
     },
@@ -759,13 +759,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "iSwIAk4Vw_rU",
-        "outputId": "f2892653-1b17-47a5-d39f-710bf5f421cc"
+        "outputId": "4ce2cd00-9f1f-4899-ccda-ae8486560290"
       },
-      "execution_count": 110,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,13 +809,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lwxlRPrU5G3B",
-        "outputId": "9780bfb5-a3f7-471b-a3c3-eae2f27398ed"
+        "outputId": "714c907e-9ee5-46c0-bb28-5d37d81fbd61"
       },
-      "execution_count": 111,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,13 +843,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "31_Qh8NW5nOk",
-        "outputId": "a457b48d-fd57-4811-da83-550df7fc90ed"
+        "outputId": "a7363088-946d-4dd2-903e-954545dea0d0"
       },
-      "execution_count": 112,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,13 +882,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lI6LMet55u43",
-        "outputId": "9343d361-e6b8-47c0-f856-871e523f8d7d"
+        "outputId": "7976e53a-5a72-47c5-8ca2-d40b2168c6a6"
       },
-      "execution_count": 113,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
